rokovi/fugot/ppj_jan_2_2018/1/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: ID_T EQ_T izraz
    4        | IDL_T EQ_T lista
    5        | izraz

    6 izraz: izraz AND_T izraz
    7      | izraz OR_T izraz
    8      | izraz IMPL_T izraz
    9      | izraz EQUI_T izraz
   10      | NEG_T izraz
   11      | '(' izraz ')'
   12      | ID_T
   13      | VAL_T
   14      | IDL_T '[' BROJ_T ']'
   15      | HEAD_T '(' lista ')'

   16 lista: '[' niz_el ']'
   17      | IDL_T
   18      | TAIL_T '(' lista ')'

   19 niz_el: niz_el ',' izraz
   20       | izraz


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'(' (40) 11 15 18
')' (41) 11 15 18
',' (44) 19
'[' (91) 14 16
']' (93) 14 16
error (256)
EQ_T (258) 3 4
AND_T (259) 6
OR_T (260) 7
IMPL_T (261) 8
EQUI_T (262) 9
NEG_T (263) 10
HEAD_T (264) 15
TAIL_T (265) 18
ID_T (266) 3 12
IDL_T (267) 4 14 17
VAL_T (268) 13
BROJ_T (269) 14


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1 2, on right: 0 1
naredba (23)
    on left: 3 4 5, on right: 1 2
izraz (24)
    on left: 6 7 8 9 10 11 12 13 14 15, on right: 3 5 6 7 8 9 10 11
    19 20
lista (25)
    on left: 16 17 18, on right: 4 15 18
niz_el (26)
    on left: 19 20, on right: 16 19


State 0

    0 $accept: . program $end

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 3
    IDL_T   shift, and go to state 4
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    program  go to state 7
    naredba  go to state 8
    izraz    go to state 9


State 1

   10 izraz: NEG_T . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 12


State 2

   15 izraz: HEAD_T . '(' lista ')'

    '('  shift, and go to state 13


State 3

    3 naredba: ID_T . EQ_T izraz
   12 izraz: ID_T .

    EQ_T  shift, and go to state 14

    $default  reduce using rule 12 (izraz)


State 4

    4 naredba: IDL_T . EQ_T lista
   14 izraz: IDL_T . '[' BROJ_T ']'

    EQ_T  shift, and go to state 15
    '['   shift, and go to state 16


State 5

   13 izraz: VAL_T .

    $default  reduce using rule 13 (izraz)


State 6

   11 izraz: '(' . izraz ')'

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 17


State 7

    0 $accept: program . $end
    1 program: program . naredba '\n'

    $end    shift, and go to state 18
    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 3
    IDL_T   shift, and go to state 4
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    naredba  go to state 19
    izraz    go to state 9


State 8

    2 program: naredba . '\n'

    '\n'  shift, and go to state 20


State 9

    5 naredba: izraz .
    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz

    AND_T   shift, and go to state 21
    OR_T    shift, and go to state 22
    IMPL_T  shift, and go to state 23
    EQUI_T  shift, and go to state 24

    $default  reduce using rule 5 (naredba)


State 10

   12 izraz: ID_T .

    $default  reduce using rule 12 (izraz)


State 11

   14 izraz: IDL_T . '[' BROJ_T ']'

    '['  shift, and go to state 16


State 12

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz
   10      | NEG_T izraz .

    $default  reduce using rule 10 (izraz)


State 13

   15 izraz: HEAD_T '(' . lista ')'

    TAIL_T  shift, and go to state 25
    IDL_T   shift, and go to state 26
    '['     shift, and go to state 27

    lista  go to state 28


State 14

    3 naredba: ID_T EQ_T . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 29


State 15

    4 naredba: IDL_T EQ_T . lista

    TAIL_T  shift, and go to state 25
    IDL_T   shift, and go to state 26
    '['     shift, and go to state 27

    lista  go to state 30


State 16

   14 izraz: IDL_T '[' . BROJ_T ']'

    BROJ_T  shift, and go to state 31


State 17

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz
   11      | '(' izraz . ')'

    AND_T   shift, and go to state 21
    OR_T    shift, and go to state 22
    IMPL_T  shift, and go to state 23
    EQUI_T  shift, and go to state 24
    ')'     shift, and go to state 32


State 18

    0 $accept: program $end .

    $default  accept


State 19

    1 program: program naredba . '\n'

    '\n'  shift, and go to state 33


State 20

    2 program: naredba '\n' .

    $default  reduce using rule 2 (program)


State 21

    6 izraz: izraz AND_T . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 34


State 22

    7 izraz: izraz OR_T . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 35


State 23

    8 izraz: izraz IMPL_T . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 36


State 24

    9 izraz: izraz EQUI_T . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 37


State 25

   18 lista: TAIL_T . '(' lista ')'

    '('  shift, and go to state 38


State 26

   17 lista: IDL_T .

    $default  reduce using rule 17 (lista)


State 27

   16 lista: '[' . niz_el ']'

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz   go to state 39
    niz_el  go to state 40


State 28

   15 izraz: HEAD_T '(' lista . ')'

    ')'  shift, and go to state 41


State 29

    3 naredba: ID_T EQ_T izraz .
    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz

    AND_T   shift, and go to state 21
    OR_T    shift, and go to state 22
    IMPL_T  shift, and go to state 23
    EQUI_T  shift, and go to state 24

    $default  reduce using rule 3 (naredba)


State 30

    4 naredba: IDL_T EQ_T lista .

    $default  reduce using rule 4 (naredba)


State 31

   14 izraz: IDL_T '[' BROJ_T . ']'

    ']'  shift, and go to state 42


State 32

   11 izraz: '(' izraz ')' .

    $default  reduce using rule 11 (izraz)


State 33

    1 program: program naredba '\n' .

    $default  reduce using rule 1 (program)


State 34

    6 izraz: izraz . AND_T izraz
    6      | izraz AND_T izraz .
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz

    $default  reduce using rule 6 (izraz)


State 35

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    7      | izraz OR_T izraz .
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz

    AND_T  shift, and go to state 21

    $default  reduce using rule 7 (izraz)


State 36

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    8      | izraz IMPL_T izraz .
    9      | izraz . EQUI_T izraz

    AND_T  shift, and go to state 21
    OR_T   shift, and go to state 22

    $default  reduce using rule 8 (izraz)


State 37

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz
    9      | izraz EQUI_T izraz .

    AND_T   shift, and go to state 21
    OR_T    shift, and go to state 22
    IMPL_T  shift, and go to state 23

    $default  reduce using rule 9 (izraz)


State 38

   18 lista: TAIL_T '(' . lista ')'

    TAIL_T  shift, and go to state 25
    IDL_T   shift, and go to state 26
    '['     shift, and go to state 27

    lista  go to state 43


State 39

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz
   20 niz_el: izraz .

    AND_T   shift, and go to state 21
    OR_T    shift, and go to state 22
    IMPL_T  shift, and go to state 23
    EQUI_T  shift, and go to state 24

    $default  reduce using rule 20 (niz_el)


State 40

   16 lista: '[' niz_el . ']'
   19 niz_el: niz_el . ',' izraz

    ']'  shift, and go to state 44
    ','  shift, and go to state 45


State 41

   15 izraz: HEAD_T '(' lista ')' .

    $default  reduce using rule 15 (izraz)


State 42

   14 izraz: IDL_T '[' BROJ_T ']' .

    $default  reduce using rule 14 (izraz)


State 43

   18 lista: TAIL_T '(' lista . ')'

    ')'  shift, and go to state 46


State 44

   16 lista: '[' niz_el ']' .

    $default  reduce using rule 16 (lista)


State 45

   19 niz_el: niz_el ',' . izraz

    NEG_T   shift, and go to state 1
    HEAD_T  shift, and go to state 2
    ID_T    shift, and go to state 10
    IDL_T   shift, and go to state 11
    VAL_T   shift, and go to state 5
    '('     shift, and go to state 6

    izraz  go to state 47


State 46

   18 lista: TAIL_T '(' lista ')' .

    $default  reduce using rule 18 (lista)


State 47

    6 izraz: izraz . AND_T izraz
    7      | izraz . OR_T izraz
    8      | izraz . IMPL_T izraz
    9      | izraz . EQUI_T izraz
   19 niz_el: niz_el ',' izraz .

    AND_T   shift, and go to state 21
    OR_T    shift, and go to state 22
    IMPL_T  shift, and go to state 23
    EQUI_T  shift, and go to state 24

    $default  reduce using rule 19 (niz_el)
